[package]
name = "cosm-tome"
version = "0.2.3"
edition = "2021"
authors = [
    "Harry Hull <harry.hull1@gmail.com>",
    "Kromsten <kromsten@megarock.labs>",
]

readme = "README.md"
description = "Easy to use Cosmos SDK rust client library (Fork)"
repository = "https://github.com/kromsten/cosm-tome.git"

keywords = ["cosmos"]
categories = ["cryptography::cryptocurrencies"]
license = "Apache-2.0"

[features]
mocks = ["mockall"]
os_keyring = ["keyring"]

[dependencies]
cosmrs = { version = "0.16.0", features = ["rpc", "cosmwasm", "grpc"] }
bip32  = { version = "0.5.1", features = ["secp256k1", "alloc", "bip39" ] }
tonic  = { version = "0.11.0", default-features = false, features = ["transport", "prost"] }

async-trait = "0.1.80"
thiserror = "1.0.60"
regex = "1.10.4"
serde = { version = "1.0.201", default-features = false, features = ["derive"] }
serde_json = "1.0.117"
schemars = "0.8.19"

keyring = { version = "2.3.3", optional = true }
mockall = { version = "0.12.1", optional = true }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"]}
